<resources>
    <string name="app_name">배모</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 버튼 -->
    <string name="button_ok">확인</string>
    <string name="button_remove">삭제</string>
    <string name="button_edit">수정</string>
    <string name="button_next">다음</string>
    <string name="button_exit">닫기</string>
    <string name="button_no">취소</string>

    <!-- 홈 / fragment_home -->
    <string name="home_category1">레슨</string>
    <string name="home_category2">시설</string>
    <string name="home_logo_description">로고 이미지</string>
    <string name="home_ad_description">배너 광고 이미지</string>
    <string name="home_locate">내 위치</string>
    <string name="home_area">지역</string>
    <string name="home_age">나이</string>
    <string name="home_hint">카테고리 또는 업체명을 입력해 주세요.</string>
    <string name="home_search">검색</string>

    <!-- 검색 결과 / fragment_result -->
    <string name="result_title">검색 결과</string>

    <!-- 마이 / fragment_my -->
    <string name="my_title">마이 페이지</string>
    <string name="my_point">포인트</string>
    <string name="my_my_description">내 프로필 이미지</string>
    <string name="my_review_button">리뷰 관리</string>
    <string name="my_point_button">포인트 상점</string>

    <!-- 업체 상세 / fragment_company_default, list_company -->
    <string name="company_img">업체 사진</string>
    <string name="company_img_description">업체 이미지</string>
    <string name="company_name">업체명</string>
    <string name="company_detail_address">상세주소</string>
    <string name="company_target">교육대상</string>
    <string name="company_distance">거리</string>
    <string name="company_category">카테고리</string>
    <string name="company_map">위치</string>

    <!-- 업체 상세 강사 소개 / list_company_info_career -->
    <string name="company_career_img_description">강사 이미지</string>
    <string name="company_career_name">성함</string>
    <string name="company_career_rank">직급</string>
    <string name="company_career_career">커리어</string>

    <string name="company_review_desc">리뷰 작성은 마이 페이지에서 가능합니다.</string>

    <!-- 리뷰 / activity_review -->
    <string name="review_title">리뷰</string>

    <!-- 미작성 리뷰 / list_my_review_need_fill -->
    <string name="review_button">리뷰 쓰러 가기</string>

    <!-- 리뷰 작성 다이얼 / dial_review -->
    <string name="review_dialog_title">별점</string>
    <string name="review_dialog_hint">내용을 입력해 주세요.</string>

    <!-- 로그인 / activity_login -->
    <string name="login_title">로그인</string>
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_check_id">아이디 저장</string>
    <string name="login_check_auto">자동 로그인</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_pw">비밀번호 찾기</string>
    <string name="login_space">|</string>
    <string name="login_guest">비회원으로 둘러볼게요</string>
    <string name="login_site">업체 전용 사이트로 이용할래요</string>
    <string name="register">회원 가입</string>

    <!-- 회원가입 / activity_register -->
    <string name="register_id">아이디 (전화번호)</string>
    <string name="register_id_hint">아이디 입력</string>
    <string name="register_name">이름</string>
    <string name="register_name_hint">한글로 입력</string>
    <string name="register_pw">비밀번호</string>
    <string name="register_pw_hint">숫자, 영어, 특수문자 포함 8자 이상</string>
    <string name="register_pw_check">비밀번호 확인</string>
    <string name="register_check_validate">중복 확인</string>

    <!-- 환경설정 / activity_setting -->
    <string name="setting_title">환경 설정</string>

    <!-- 공지사항 / activity_info -->
    <string name="notice_title">공지 사항</string>

    <!-- 약관 및 정책 / activity_law -->
    <string name="law_title">약관 및 정책</string>

    <!-- 포인트 상점 / activity_point -->
    <string name="point_title">포인트 상점</string>
    <string name="point_has">보유 포인트</string>
    <string name="point_button">구매 신청</string>
    <string name="point_history">내역</string>

    <!-- 고객 센터 / activity_customer_service -->
    <string name="customer_service_kakao">카카오톡 : 배움의 모든것</string>
    <string name="customer_service_email_text">이메일 : bemo1117@naver.com</string>
    <string name="customer_service_email">bemo1117@naver.com</string>
    <string name="customer_service_kakao_uri">http://pf.kakao.com/_GxaZxnxj/chat</string>

    <!-- 팝업 광고 / dial_pop_up_ad -->
    <string name="pop_up_title">일주일 동안 보지 않기</string>

    <!-- 회원 탈퇴 / dial_delete -->
    <string name="delete_body">정말 계정을 탈퇴하시겠습니까?계정을 탈퇴 하시면 모든 계정 정보가 삭제 되며 복구가 불가능 합니다.</string>
    <string name="delete_yes">회원 탈퇴</string>

    <!-- 로그 아웃 / dial_log_out -->
    <string name="log_out_body">정말 로그 아웃 하시겠습니까?</string>

    <!-- 문의 하기 / dial_contact -->
    <string name="contact_title">수강 문의</string>

    <!-- 스플래시 / activity_splash -->
    <string name="splash_title">배우고 싶을땐 배움의 모든 것</string>

    <dimen name="font_size_tab">9sp</dimen>
    <dimen name="font_size_10">10sp</dimen>
    <dimen name="font_size_12">12sp</dimen>
    <dimen name="font_size_14">14sp</dimen>
    <dimen name="font_size_16">16sp</dimen>

    <dimen name="guide_top">56dp</dimen>

    <dimen name="margin_left_4">4dp</dimen>
    <dimen name="margin_left_8">8dp</dimen>
    <dimen name="margin_left_12">12dp</dimen>
    <dimen name="margin_left_16">16dp</dimen>
    <dimen name="margin_left_19">19dp</dimen>
    <dimen name="margin_left_24">24dp</dimen>
    <dimen name="margin_left_20">20dp</dimen>
    <dimen name="margin_left_31">31dp</dimen>
    <dimen name="margin_left_38">38dp</dimen>

    <dimen name="margin_top_2">2dp</dimen>
    <dimen name="margin_top_4">4dp</dimen>
    <dimen name="margin_top_6">6dp</dimen>
    <dimen name="margin_top_7">7dp</dimen>
    <dimen name="margin_top_8">8dp</dimen>
    <dimen name="margin_top_10">10dp</dimen>
    <dimen name="margin_top_11">11dp</dimen>
    <dimen name="margin_top_12">12dp</dimen>
    <dimen name="margin_top_13">13dp</dimen>
    <dimen name="margin_top_14">14dp</dimen>
    <dimen name="margin_top_15">15dp</dimen>
    <dimen name="margin_top_16">16dp</dimen>
    <dimen name="margin_top_19">19dp</dimen>
    <dimen name="margin_top_20">20dp</dimen>
    <dimen name="margin_top_22">24dp</dimen>
    <dimen name="margin_top_24">24dp</dimen>
    <dimen name="margin_top_28">28dp</dimen>
    <dimen name="margin_top_32">32dp</dimen>
    <dimen name="margin_top_36">36dp</dimen>
    <dimen name="margin_top_44">44dp</dimen>
    <dimen name="margin_top_60">60dp</dimen>
    <dimen name="margin_top_90">90dp</dimen>


    <dimen name="height_6">6dp</dimen>
    <dimen name="height_7">7dp</dimen>
    <dimen name="height_11">11dp</dimen>
    <dimen name="height_14">14dp</dimen>
    <dimen name="height_20">20dp</dimen>
    <dimen name="height_29">29dp</dimen>
    <dimen name="height_32">32dp</dimen>
    <dimen name="height_33">33dp</dimen>
    <dimen name="height_36">36dp</dimen>
    <dimen name="height_38">38dp</dimen>
    <dimen name="height_44">44dp</dimen>
    <dimen name="height_48">48dp</dimen>
    <dimen name="height_90">90dp</dimen>
    <dimen name="height_115">115dp</dimen>
    <dimen name="height_143">143dp</dimen>

    <dimen name="corner_10">10dp</dimen>

    <drawable name="review_default">@drawable/img_default_my</drawable>

</resources>