<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="186dp"
    android:layout_marginBottom="@dimen/margin_top_2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/viewImg"
            android:layout_width="@dimen/height_90"
            android:layout_height="@dimen/height_90"
            app:cardCornerRadius="@dimen/corner_10"
            android:layout_marginStart="@dimen/margin_left_20"
            android:layout_marginTop="@dimen/margin_top_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imgCompany"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/company_img_description"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtCompany1"
            style="@style/text_black_14"
            android:layout_marginStart="@dimen/margin_left_16"
            app:layout_constraintBottom_toTopOf="@id/txtCompany2"
            app:layout_constraintLeft_toRightOf="@id/viewImg"
            app:layout_constraintTop_toTopOf="@id/viewImg" />

        <TextView
            android:id="@+id/txtCompany2"
            style="@style/text_title_gray2_12"
            android:text="@string/company_detail_address"
            app:layout_constraintBottom_toTopOf="@id/txtCompany3"
            app:layout_constraintLeft_toLeftOf="@id/txtCompany1"
            app:layout_constraintTop_toBottomOf="@id/txtCompany1" />

        <TextView
            android:id="@+id/txtCompany3"
            style="@style/text_title_gray2_12"
            android:text="@string/company_target"
            app:layout_constraintBottom_toTopOf="@id/txtCompany4"
            app:layout_constraintLeft_toLeftOf="@id/txtCompany1"
            app:layout_constraintTop_toBottomOf="@id/txtCompany2" />

        <TextView
            android:id="@+id/txtCompany4"
            style="@style/text_title_gray2_12"
            android:text="@string/company_distance"
            app:layout_constraintBottom_toBottomOf="@id/viewImg"
            app:layout_constraintLeft_toLeftOf="@id/txtCompany1"
            app:layout_constraintTop_toBottomOf="@id/txtCompany3" />

        <TextView
            android:id="@+id/txtCompanyAddress"
            style="@style/text_title_black_12"
            android:layout_marginStart="@dimen/margin_left_16"
            app:layout_constraintBottom_toBottomOf="@id/txtCompany2"
            app:layout_constraintLeft_toRightOf="@id/txtCompany2"
            app:layout_constraintTop_toTopOf="@id/txtCompany2" />

        <TextView
            android:id="@+id/txtCompanyTarget"
            style="@style/text_title_black_12"
            app:layout_constraintBottom_toBottomOf="@id/txtCompany3"
            app:layout_constraintLeft_toLeftOf="@id/txtCompanyAddress"
            app:layout_constraintTop_toTopOf="@id/txtCompany3" />

        <TextView
            android:id="@+id/txtCompanyDistance"
            style="@style/text_title_black_12"
            app:layout_constraintBottom_toBottomOf="@id/txtCompany4"
            app:layout_constraintLeft_toLeftOf="@id/txtCompanyAddress"
            app:layout_constraintTop_toTopOf="@id/txtCompany4" />

        <Button
            android:id="@+id/btnReview"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_left_20"
            android:layout_marginTop="@dimen/margin_top_20"
            android:layout_marginEnd="@dimen/margin_left_20"
            android:background="@drawable/shape_btn4"
            android:text="@string/review_button"
            android:textColor="@color/gray2"
            android:textSize="@dimen/font_size_12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewImg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>