<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="158dp"
    android:layout_marginTop="@dimen/margin_top_2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgCompany"
            android:layout_width="@dimen/height_90"
            android:layout_height="@dimen/height_90"
            android:layout_marginStart="@dimen/margin_left_20"
            android:layout_marginTop="@dimen/margin_top_20"
            android:background="@drawable/shape_round"
            android:contentDescription="@string/company_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCompany1"
            style="@style/text_gray2_12"
            android:layout_marginStart="@dimen/margin_left_16"
            android:text="@string/company_name"
            app:layout_constraintBottom_toTopOf="@id/txtCompany2"
            app:layout_constraintLeft_toRightOf="@id/imgCompany"
            app:layout_constraintTop_toTopOf="@id/imgCompany" />

        <TextView
            android:id="@+id/txtCompany2"
            style="@style/text_gray2_12"
            android:text="@string/company_detail_address"
            app:layout_constraintBottom_toTopOf="@id/txtCompany3"
            app:layout_constraintLeft_toLeftOf="@id/txtCompany1"
            app:layout_constraintTop_toBottomOf="@id/txtCompany1" />

        <TextView
            android:id="@+id/txtCompany3"
            style="@style/text_gray2_12"
            android:text="@string/company_target"
            app:layout_constraintBottom_toTopOf="@id/txtCompany4"
            app:layout_constraintLeft_toLeftOf="@id/txtCompany1"
            app:layout_constraintTop_toBottomOf="@id/txtCompany2" />

        <TextView
            android:id="@+id/txtCompany4"
            style="@style/text_gray2_12"
            android:text="@string/company_distance"
            app:layout_constraintBottom_toBottomOf="@id/imgCompany"
            app:layout_constraintLeft_toLeftOf="@id/txtCompany1"
            app:layout_constraintTop_toBottomOf="@id/txtCompany3" />


        <TextView
            android:id="@+id/txtCompanyName"
            style="@style/text_black_12"
            app:layout_constraintBottom_toBottomOf="@id/txtCompany1"
            app:layout_constraintLeft_toLeftOf="@id/txtCompanyAddress"
            app:layout_constraintTop_toTopOf="@id/txtCompany1" />

        <TextView
            android:id="@+id/txtCompanyAddress"
            style="@style/text_black_12"
            android:layout_marginStart="@dimen/margin_left_16"
            app:layout_constraintBottom_toBottomOf="@id/txtCompany2"
            app:layout_constraintLeft_toRightOf="@id/txtCompany2"
            app:layout_constraintTop_toTopOf="@id/txtCompany2" />

        <TextView
            android:id="@+id/txtCompanyTarget"
            style="@style/text_black_12"
            app:layout_constraintBottom_toBottomOf="@id/txtCompany3"
            app:layout_constraintLeft_toLeftOf="@id/txtCompanyAddress"
            app:layout_constraintTop_toTopOf="@id/txtCompany3" />

        <TextView
            android:id="@+id/txtCompanyDistance"
            style="@style/text_black_12"
            app:layout_constraintBottom_toBottomOf="@id/txtCompany4"
            app:layout_constraintLeft_toLeftOf="@id/txtCompanyAddress"
            app:layout_constraintTop_toTopOf="@id/txtCompany4" />

        <TextView
            android:id="@+id/txtCompanyShuttle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_13"
            android:background="@drawable/shape_round"
            android:paddingLeft="10dp"
            android:paddingTop="4dp"
            android:paddingRight="10dp"
            android:paddingBottom="4dp"
            android:textSize="@dimen/font_size_12"
            app:layout_constraintLeft_toLeftOf="@id/txtCompany1"
            app:layout_constraintTop_toBottomOf="@id/txtCompanyDistance" />


        <TextView
            android:id="@+id/txtCompanyLesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_13"
            android:layout_marginStart="@dimen/margin_left_12"
            android:background="@drawable/shape_round"
            android:paddingLeft="10dp"
            android:paddingTop="4dp"
            android:paddingRight="10dp"
            android:paddingBottom="4dp"
            android:textSize="@dimen/font_size_12"
            app:layout_constraintLeft_toRightOf="@id/txtCompanyShuttle"
            app:layout_constraintTop_toBottomOf="@id/txtCompanyDistance" />


        <Button
            android:id="@+id/btnCompanyMsg"
            android:layout_width="@dimen/height_33"
            android:layout_height="@dimen/height_33"
            android:layout_marginEnd="@dimen/margin_left_19"
            android:layout_marginBottom="@dimen/margin_top_12"
            android:background="@drawable/img_msg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCompanyAddress" />

        <Button
            android:id="@+id/btnCompanyPhone"
            android:layout_width="@dimen/height_33"
            android:layout_height="@dimen/height_33"
            android:layout_marginTop="@dimen/margin_top_7"
            android:background="@drawable/img_phone"
            app:layout_constraintRight_toRightOf="@id/btnCompanyMsg"
            app:layout_constraintTop_toBottomOf="@id/btnCompanyMsg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>